tests/ui/pattern/usefulness/slice_of_empty.normal.stderr
error[E0004]: non-exhaustive patterns: `&[_, ..]` not covered
  --> $DIR/slice_of_empty.rs:9:11
   |
LL |     match nevers {
   |           ^^^^^^ pattern `&[_, ..]` not covered
   |
   = note: the matched value is of type `&[!]`
   = note: `!` is uninhabited but is not being matched by value, so a wildcard `_` is required
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         &[] => (),
LL ~         &[_, ..] => todo!(),
   |

error[E0004]: non-exhaustive patterns: `&[]` and `&[_, _, ..]` not covered
  --> $DIR/slice_of_empty.rs:20:11
   |
LL |     match nevers {
   |           ^^^^^^ patterns `&[]` and `&[_, _, ..]` not covered
   |
   = note: the matched value is of type `&[!]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         &[_] => (),
LL ~         &[] | &[_, _, ..] => todo!(),
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
